dev server is now working, css is automatically imported, entry name is optional

--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -6,5 +6,5 @@ services:
         alias: vite.manifest.registry
     vite.twig.extension:
         class: MakinaCorpus\ViteBundle\Twig\Extension\ViteTwigExtension
-        arguments: ["@vite.manifest.registry"]
+        arguments: ["@vite.manifest.registry", "%kernel.environment%"]
         tags: ['twig.extension']
